fixed footer margin on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -900,6 +900,7 @@ video {
 
   .footer-right .nav-link {
     padding: 0;
+    margin-right: 20px;
   }
 
   .footer-right {
